# montecarlo-DGL

./: .gitignore  .gitmodules  CMakeLists.txt  PROJECT_REPORT.md  README.md  TODO.md  function.txt  how acd96f1
RandomNumbersAndDistributions/: CMakeLists.txt  main_random
RandomNumbersAndDistributions/src/: main_random.cpp
assets/: cabin_points.txt
common/: cmake-common.cmake
drone_assets/: cabin_hull.txt  drone_domain.txt
src/: benchmarks.cpp  benchmarks.hpp  main.cpp
src/apps/: benchmarks.cpp  benchmarks.hpp  drone_optimization.cpp  drone_optimization_ellipsoid_strength.cpp  main.cpp  wind_farm_simulator.cpp
src/apps/benchmarks/: ga_benchmarks.cpp  integration_benchmarks.cpp
src/domains/: hypercylinder.hpp  hypercylinder.tpp  hyperrectangle.hpp  hyperrectangle.tpp  hypersphere.hpp  hypersphere.tpp  integration_domain.hpp  polytope.hpp  polytope.tpp
src/integrators/: montecarlo_integrator.hpp  montecarlo_integrator.tpp
src/montecarlo/: geometry.hpp  rngManager.hpp
src/montecarlo/domains/: hypercylinder.hpp  hypercylinder.tpp  hyperrectangle.hpp  hyperrectangle.tpp  hypersphere.hpp  hypersphere.tpp  integration_domain.hpp  polytope.hpp  polytope.tpp
src/montecarlo/estimators/: ISMeanEstimator.hpp  ISMeanEstimator.tpp  MCMeanEstimator.hpp  MCMeanEstimator.tpp  VolumeEstimatorMC.hpp  VolumeEstimatorMC.tpp
src/montecarlo/integrators/: ISintegrator.hpp  ISintegrator.tpp  MCintegrator.hpp  MCintegrator.tpp  MHintegrator.hpp  MHintegrator.tpp  integrator.hpp  montecarlo_integrator.hpp  montecarlo_integrator.tpp
src/montecarlo/mcmc/: metropolisHastingsSampler.hpp  metropolisHastingsSampler.tpp
src/montecarlo/optimizers/: GA.cpp  GA.hpp  PSO.cpp  PSO.hpp
src/montecarlo/proposals/: gaussianProposal.hpp  gaussianProposal.tpp  mixtureProposal.hpp  mixtureProposal.tpp  proposal.hpp  uniformProposal.hpp  uniformProposal.tpp
src/montecarlo/utils/: plotter.hpp
src/montecarlo/volumeEstimator/: VolumeEstimatorMC.hpp  VolumeEstimatorMC.tpp
src/utils/: muParserXInterface.hpp  plotter.hpp
